--- a/fashion-final-project/src/Components/NextButton/NextButton.css
+++ b/fashion-final-project/src/Components/NextButton/NextButton.css
@@ -13,6 +13,10 @@
       text-decoration: none;
   }
 
+  .nextPosition a:hover {
+    color: #2c6a67;
+}
+
   .nextBtn {
       font-family: 'Montserrat';
       color: #2c6a67;
