--- a/fashion-final-project/src/Components/Footer/Footer.css
+++ b/fashion-final-project/src/Components/Footer/Footer.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 5%;
+  /*margin-top: 5%;*/
 }
 .footer > .threads-logo {
   height: 95%;
