--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
@@ -1,148 +1,149 @@
+.MYC-returnNextBtn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 2rem;
+}
+
 body {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .make_your_clothes_wrapper {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .make_your_clothes_container {
-    min-width: 80vw;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: dashed 2px;
-    border-radius: 5px;
-    padding-left: 0;
-    padding-right: 0;
+  min-width: 80vw;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: dashed 2px;
+  border-radius: 5px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .exclusive_contact {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-family: "Montserrat";
-    font-size: 15px;
-    background-color: whitesmoke;
-    margin-top: 0;
-    
-    opacity: 1;
-    border-radius: 5px;
-    
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 15px;
+  background-color: whitesmoke;
+  margin-top: 2rem;
+  opacity: 1;
+  border-radius: 5px;
 }
 
-.exclusive_contact a{
-    color: #2C6A67;
-    text-decoration: none;
+.exclusive_contact a {
+  color: #2c6a67;
+  text-decoration: none;
 }
 
-.exclusive_contact a:hover{
-    color: #2c6a67;
+.exclusive_contact a:hover {
+  color: #2c6a67;
 }
 
 /* Media Queries */
 
 @media (min-width: 1200px) {
-    .make_your_clothes_wrapper {
-        display: flex;
-        justify-content: center;
-        
-    }
-    .make_your_clothes_container {
-        min-width: 80vw;
-        padding-right: 2%;
-        padding-left: 2%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 2%;
-        margin-right: 2%;
-    }
+  .make_your_clothes_wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .make_your_clothes_container {
+    min-width: 80vw;
+    padding-right: 2%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 }
 
 /* Medium to Large */
 
 @media (min-width: 768px) and (max-width: 1200px) {
-    .make_your_clothes_wrapper {
-        display: flex;
-        justify-content: center;
-        
-    }
-    .make_your_clothes_container {
-        min-width: 90vw;
-        padding-right: 2%;
-        padding-left: 2%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 2%;
-        margin-right: 2%;
-    }
+  .make_your_clothes_wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .make_your_clothes_container {
+    min-width: 90vw;
+    padding-right: 2%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 }
 
 /* Below medium */
 @media (min-width: 649px) and (max-width: 768px) {
-    .make_your_clothes_wrapper {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-left: 1%;
-        margin-right: 1%;
-        min-width: 100vw;
-    }
-    .make_your_clothes_container {
-        min-width: 90vw;
-        padding-right: 2%;
-        padding-left: 2%;
-        padding-top: 1%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* margin-left: 2%; 
+  .make_your_clothes_wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-left: 1%;
+    margin-right: 1%;
+    min-width: 100vw;
+  }
+  .make_your_clothes_container {
+    min-width: 90vw;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 2%; 
         margin-right: 2%;  */
-    }
-
+  }
 }
 
 /* Small to medium */
 
 @media (min-width: 576px) and (max-width: 649px) {
-    .make_your_clothes_wrapper {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-left: 1%;
-        margin-right: 1%;
-        min-width: 100vw;
-    }
-    .make_your_clothes_container {
-        min-width: 100vw;
-        /* padding-right: 2%;
+  .make_your_clothes_wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-left: 1%;
+    margin-right: 1%;
+    min-width: 100vw;
+  }
+  .make_your_clothes_container {
+    min-width: 100vw;
+    /* padding-right: 2%;
         padding-left: 2%; */
-        padding: 1%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-    }
+    padding: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 576px) {
-    .make_your_clothes_wrapper {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-left: 1%;
-        margin-right: 1%;
-        min-width: 100vw;
-    }
-    .make_your_clothes_container {
-        min-width: 100vw;
-        padding-top: 1%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } 
+  .make_your_clothes_wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-left: 1%;
+    margin-right: 1%;
+    min-width: 100vw;
+  }
+  .make_your_clothes_container {
+    min-width: 100vw;
+    padding-top: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
