--- a/fashion-final-project/src/Components/Measurements/Measurements.css
+++ b/fashion-final-project/src/Components/Measurements/Measurements.css
@@ -1,3 +1,21 @@
+.measurements-returnNextBtn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 2rem;
+}
+.measurement-nextBtn {
+  display: flex;
+  margin-right: 7%;
+  align-items: center;
+  font-family: "Montserrat";
+  color: black;
+}
+.measurement-nextBtn:hover {
+  cursor: pointer;
+  color: #2c6a67;
+}
+
 .measurementContainer {
   width: 75%;
   height: auto;
@@ -42,8 +60,7 @@
   cursor: pointer;
 }
 
-.attBtn,
-.attBtn_next {
+.attBtn {
   background-color: #e7bd44;
   border: none;
   color: #fff;
@@ -59,10 +76,6 @@
   /* margin-right: 28px; */
 }
 
-.attBtn_next {
-  margin-top: 1rem;
-}
-
 @media only screen and (max-width: 1000px) {
   .measurementHowTo {
     border: dashed 3px #281e1c8e;
@@ -70,8 +83,7 @@
     border-bottom: 0;
     border-left: 0;
   }
-  .attBtn,
-  .attBtn_next {
+  .attBtn {
     height: 50px;
     width: 40%;
   }
