--- a/fashion-final-project/src/Components/Loading/Loading.css
+++ b/fashion-final-project/src/Components/Loading/Loading.css
@@ -5,3 +5,11 @@
   padding: 20px;
   border-radius: 50%;
 }
+.loadingContainer {
+  font-family: "Style Script", cursive;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  font-size: 30px;
+  color: #2c6a67;
+  /* padding-left: 40%; */
+}
