--- a/fashion-final-project/src/Components/Manequim/ManequimTop.css
+++ b/fashion-final-project/src/Components/Manequim/ManequimTop.css
@@ -4,12 +4,11 @@
 }
 
 .wrapper_top_manequim {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top:0px;
-    left:0px;
-    width: 100%;
-    height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 300px;
+  width: 300px;
+  border: 1px solid black;
 }
