--- a/fashion-final-project/src/Components/About/About.css
+++ b/fashion-final-project/src/Components/About/About.css
@@ -3,7 +3,8 @@
   padding: 20px;
   background-color: #fcf4f1;
   width: 75%;
-  height: 550px;
+  height: 100%;
+  margin-bottom: 6rem;
 }
 
 .aboutTitle {
