--- a/fashion-final-project/src/Components/MagazinePages/Magazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/Magazine.css
@@ -267,6 +267,10 @@
   margin-top: 1rem;
 }
 
+.MP-selectPrizeBtn--active {
+  background-color: #5d86bc;
+}
+
 .MP-selectPrizeBtn:hover {
   cursor: pointer;
   background-color: #2c6a67;
