--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothesTop.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothesTop.css
@@ -101,6 +101,10 @@ body {
   font-family: "Montserrat";
 }
 
+.select_button--active {
+  background-color: #5d86bc;
+}
+
 .select_button:hover {
   cursor: pointer;
   background-color: #2c6a67;
