--- a/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
+++ b/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@ body {
 
 .principal_container_bottom {
   max-width: 85%;
-  height:auto;
+  height: auto;
   display: flex;
   padding-bottom: 1%;
   padding-right: 1%;
@@ -34,7 +33,7 @@ body {
 }
 .prints_container {
   max-width: 55vw;
-  border: dashed #2C6A67 2px;
+  border: dashed #2c6a67 2px;
   padding: 10px;
   border-radius: 5px;
   margin-top: 2%;
@@ -56,8 +55,8 @@ body {
   margin: 10px;
   padding: 10px;
   width: 200px;
-  height:auto;
-  border:solid 1px;
+  height: auto;
+  border: solid 1px;
   border-radius: 5px;
   flex: none;
   flex-direction: column;
@@ -79,17 +78,34 @@ body {
   justify-content: center;
   margin-top: 20px;
   outline-color: none;
-  
+}
+
+.select_button {
+  text-align: center;
+  background-color: #e7bd44;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  font-family: "Montserrat";
+}
+
+.select_button--active {
+  background-color: #5d86bc;
+}
+
+.select_button:hover {
+  cursor: pointer;
+  background-color: #2c6a67;
 }
 
 .select_button:active {
-transform: translateY(4px);
+  transform: translateY(4px);
 }
 
 .buttons_icon {
   background-color: transparent;
   border: none;
-  
 }
 .buttons_icon:focus {
   text-decoration: none;
@@ -97,11 +113,9 @@ transform: translateY(4px);
 }
 
 .prints_image img {
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    width: 120px;
-    height: 110px;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  width: 120px;
+  height: 110px;
 }
-
-
