--- a/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
+++ b/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
@@ -29,16 +29,16 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
-  background-color: blue;
   position: relative;
 }
 .prints_container {
   max-width: 55vw;
   border: dashed #2C6A67 2px;
-  padding: 10px;
+  padding: 20px;
   border-radius: 5px;
   margin-top: 2%;
   margin-bottom: 1%;
+  
 }
 
 .prints_container .carousel {
@@ -55,7 +55,7 @@ body {
   background-color: white;
   margin: 10px;
   padding: 10px;
-  width: 200px;
+  width: 145px;
   height:auto;
   border:solid 1px;
   border-radius: 5px;
@@ -104,4 +104,38 @@ transform: translateY(4px);
     height: 110px;
 }
 
+/* Media Queries */
 
+@media (min-width: 1200px) {
+  .prints_container {
+    max-width: 52vw;
+    
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .prints_container {
+    min-width: 45vw;
+    
+  }
+}
+
+@media (min-width: 649px) and (max-width: 768px) {
+  .prints_container {
+    min-width: 45vw;
+    
+  }
+}
+@media (min-width: 576px) and (max-width: 649px) {
+  .prints_container {
+    min-width: 40vw;
+    
+  }
+}
+
+@media (max-width: 576px) {
+  .prints_container {
+    max-width: 32vw;
+    
+  }
+}
