--- a/fashion-final-project/src/Components/ColorsCarousel/ColorsCarousel.css
+++ b/fashion-final-project/src/Components/ColorsCarousel/ColorsCarousel.css
@@ -128,11 +128,29 @@ body {
     min-width: 45vw;
     
   }
+  .principal_container_top {
+    max-width: 95%;
+    height: auto;
+    display: flex;
+    /* padding-bottom: 1%; */
+    padding-right: 1%;
+    padding-left: 1%;
+    
+  }
 }
 
 @media (min-width: 649px) and (max-width: 768px) {
   .colors_container {
     min-width: 45vw;
+    
+  }
+  .principal_container_top {
+    max-width: 95%;
+    height: auto;
+    display: flex;
+    /* padding-bottom: 1%; */
+    padding-right: 1%;
+    padding-left: 1%;
     
   }
 }
