--- a/fashion-final-project/src/Components/YourDesign/YourDesign.css
+++ b/fashion-final-project/src/Components/YourDesign/YourDesign.css
@@ -5,15 +5,11 @@ body {
 
 .your_design_catalogue {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     font-family: "Style Script";
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     color: #003D3A;
-    margin: 3% 3%; 
-}
-.your_design_catalogue h2 {
-    margin-left: 8%;
-    margin-bottom: 2%;
+    margin-bottom: 1%;
 }
 
 
@@ -27,6 +23,7 @@ body {
     margin-right: auto;
     border-radius: 5px;
     align-items: center;
+    margin-bottom: 2%;
 }
 
 .jumpsuits_box_your_design,
@@ -38,6 +35,7 @@ body {
     border: 2px dashed ;
     /* border-color: #707070; */
     background-position: center;
+    margin-bottom: 2%;
 }
 
 .jumpsuits_box_your_design:hover,
@@ -63,8 +61,18 @@ body {
     font-size: 18px;
 }
 
+.design_button_your_design:hover {
+    -moz-box-shadow: 0 0 15px #707070;
+    -webkit-box-shadow: 0 0 15px #707070;
+    box-shadow: 0 0 10px #707070;
+}
+
+.design_button_your_design a {
+    color: #fcf4f1
+}
+
 .clothes_types_container_your_design {
-    width: 50%;
+    width: 38%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -188,7 +196,7 @@ body {
     }
     .jumpsuits_box_your_design,
     .dresses_box_your_design {
-        width: 95%;
+        width: 100%;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -198,7 +206,7 @@ body {
         border-radius: 5px;
      }
      .design_button_your_design {
-        width: 95%;
+        width: 100%;
         height: 5vh;
         display: flex;
         align-items: center;
