--- a/src/Components/ColorsCarousel/ColorsCarousel.css
+++ b/src/Components/ColorsCarousel/ColorsCarousel.css
@@ -126,10 +126,10 @@ body {
 @media (min-width: 768px) and (max-width: 992px) {
   .colors_container {
     min-width: 45vw;
-    
+    margin-right: 4%;
   }
   .principal_container_top {
-    max-width: 95%;
+    min-width: 95%;
     height: auto;
     display: flex;
     /* padding-bottom: 1%; */
@@ -142,7 +142,7 @@ body {
 @media (min-width: 649px) and (max-width: 768px) {
   .colors_container {
     min-width: 45vw;
-    
+    margin-right: 4%;
   }
   .principal_container_top {
     max-width: 95%;
@@ -157,7 +157,8 @@ body {
 @media (min-width: 576px) and (max-width: 649px) {
   .colors_container {
     min-width: 40vw;
-    
+    margin-right: 4%;
+
   }
 }
 
