responsiveness for phone

--- a/src/Components/Manequim/ManequimBottom.css
+++ b/src/Components/Manequim/ManequimBottom.css
@@ -5,9 +5,8 @@
 
 /* Media Querie */
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (max-width: 767px)  {
     .manequim_bottom_image {
-        width: 250px;
-        height: 500px;
+        padding-bottom: 10%;
     }
 }
