--- a/src/Components/ColorsCarousel/ColorsCarousel.css
+++ b/src/Components/ColorsCarousel/ColorsCarousel.css
@@ -139,7 +139,7 @@ body {
   }
 }
 
-@media (min-width: 649px) and (max-width: 768px) {
+/* @media (min-width: 649px) and (max-width: 768px) {
   .colors_container {
     min-width: 45vw;
     margin-right: 4%;
@@ -148,24 +148,35 @@ body {
     max-width: 95%;
     height: auto;
     display: flex;
-    /* padding-bottom: 1%; */
+    padding-bottom: 1%;
     padding-right: 1%;
     padding-left: 1%;
     
   }
-}
-@media (min-width: 576px) and (max-width: 649px) {
+} */
+/* @media (min-width: 576px) and (max-width: 649px) {
   .colors_container {
     min-width: 40vw;
     margin-right: 4%;
 
   }
-}
+} */
 
 
-@media (max-width: 576px) {
+@media (max-width: 767px) {
+  .principal_container_top {
+    min-width: 70%;
+    height: auto;
+    display: flex;
+    padding-bottom: 1%;
+    
+    padding-left: 7%;
+    align-items: center;
+    justify-content: center;
+  }
   .colors_container {
-    max-width: 32vw;
+    max-width:70vw;
+
     
   }
 }
