--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,7 +1,7 @@
 .contactContainer {
   background-color: #fcf4f1;
   width: 75%;
-  height: 100%;
+  height: auto;
   margin-bottom: 6rem;
   font-family: "Poiret One", "Trebuchet MS", "Lucida Sans Unicode",
     "Lucida Grande", "Lucida Sans", Arial, sans-serif;
