--- a/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
+++ b/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
@@ -111,9 +111,43 @@ body {
   }
 }
 
+@media (max-width: 767px) {
+  .make_your_clothes_container {
+    max-width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    align-content: center;
+    padding-right: 3%;
+  }
+  
+  .carousel_container_colors,
+  .carousel_container_prints {
+    display: flex;
+    align-items: center;
+    height: auto;
+    align-self: center;
+    
+}
+.carousels {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+.make_your_clothes_container_parent {
+  display: flex;
+  align-items: center;
+  padding-right: 0;
+  margin-right: 0;
+  
+}
+}
+
 
 /* Below medium */
-@media (min-width: 649px) and (max-width: 768px) {
+/* @media (min-width: 649px) and (max-width: 768px) {
   .make_your_clothes_wrapper {
     display: flex;
     justify-content: center;
@@ -128,11 +162,11 @@ body {
     margin-left: 2%;
     margin-right: 2%;
   }
-}
+} */
 
 /* Small to medium */
 
-@media (min-width: 576px) and (max-width: 649px) {
+/* @media (min-width: 576px) and (max-width: 649px) {
   .make_your_clothes_wrapper {
     display: flex;
     justify-content: center;
@@ -165,4 +199,4 @@ body {
   
   }
   
-}
+} */
