--- a/src/Components/MakeYourDesignPatterns/MakeYourDesignPatterns.css
+++ b/src/Components/MakeYourDesignPatterns/MakeYourDesignPatterns.css
@@ -88,7 +88,7 @@ body {
   }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (max-width: 992px) {
   .main_container_color_and_pattern {
     min-width: 95vw;
     display: flex;
@@ -111,35 +111,38 @@ body {
 
 @media (max-width: 767px) {
   .main_container_color_and_pattern {
-    min-width: 95vw;
-    display: flex;
-    justify-content: center;
-    padding-left: 4%;
-    
-  }
-  .carousels {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    align-items: flex-start;
-    
-  }
-}
-
-/* Extra Small */
-
-@media (max-width: 576px) {
-  .main_container_color_and_pattern {
-    width: 92%;
+    max-width: 70%;
     height: auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+    align-content: center;
+    
   }
+  
   .make_your_design_color_and_pattern h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: normal;
+    justify-content: center;
   }
+
+  
+  /* .carousel_container_colors,
+  .carousel_container_prints {
+    display: flex;
+    align-items: center;
+    height: auto;
+    align-self: center;
+} */
+.carousels {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
+}
+
