--- a/src/Components/Manequim/Manequin.css
+++ b/src/Components/Manequim/Manequin.css
@@ -7,7 +7,6 @@
 
 @media (min-width: 576px) and (max-width: 649px) {
     .manequim_image {
-        width: 100px;
-        height: 300px;
+        padding-bottom: 10%;
     }
 }
